Working on bidirectional testing.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
 all: test_sending_estimation_server
 
 test_sending_estimation_server: test_sending_estimation.cpp
-	g++ -o $@ $^ -DSERVER_ONLY -g -O0 -Wall -Werror -pthread
+	g++ -o $@ $^ -DSERVER_ONLY -g -O0 -Wall -Werror
