Made some compilation adjustments so that I get the barebones wifi power estimation on the server.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,3 +2,6 @@ all: test_sending_estimation_server
 
 test_sending_estimation_server: test_sending_estimation.cpp
 	g++ -o $@ $^ -DSERVER_ONLY -g -O0 -Wall -Werror -I.. -L.. -lpowertutor
+
+clean:
+	rm -f test_sending_estimation_server
