--- a/android_project/test/AndroidManifest.xml
+++ b/android_project/test/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <instrumentation android:targetPackage="edu.umich.libpowertutor" android:name="android.test.InstrumentationTestRunner" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
     <uses-library android:name="android.test.runner" />
