--- a/cpp_source/tests/Makefile
+++ b/cpp_source/tests/Makefile
@@ -1,5 +1,4 @@
-#all: test_sending_estimation_server
-all: test_simulation
+all: test_simulation test_sending_estimation_server
 
 test_sending_estimation_server: test_sending_estimation.cpp
 	g++ -o $@ $^ -DSERVER_ONLY -g -O0 -Wall -Werror -I.. -L.. -pthread -lpowertutor
