--- a/cpp_source/Makefile
+++ b/cpp_source/Makefile
@@ -6,10 +6,10 @@ SRCS := libpowertutor.cpp timeops.cpp power_model.cpp
 DEPS := debug.h libpowertutor.h pthread_util.h timeops.h utils.h
 
 libpowertutor.so: $(SRCS) $(DEPS)
-	g++ -o $@ $(SRCS) -g -O0 -Wall -Werror -shared -DBUILDING_SHLIB -pthread $(MOCKTIME_LDFLAGS)
+	g++ -o $@ $(SRCS) -g -O0 -fpic -Wall -Werror -shared -DBUILDING_SHLIB -pthread $(MOCKTIME_LDFLAGS)
 
 libpowertutor_sim.so: $(SRCS) $(DEPS)
-	g++ -o $@ $(SRCS) -g -O0 -Wall -Werror -shared -DBUILDING_SHLIB -DSIMULATION_BUILD -pthread $(MOCKTIME_LDFLAGS)
+	g++ -o $@ $(SRCS) -g -O0 -fpic -Wall -Werror -shared -DBUILDING_SHLIB -DSIMULATION_BUILD -pthread $(MOCKTIME_LDFLAGS)
 
 install:
 	-install libpowertutor.so /usr/local/lib
