Testing with callgrind.

--- a/cpp_source/tests/Makefile
+++ b/cpp_source/tests/Makefile
@@ -1,4 +1,7 @@
-all: test_simulation test_sending_estimation_server
+all: test_simulation test_sending_estimation_server test_functor
+
+test_functor: test_functor.cpp
+	g++ -std=c++11 -o $@ $^ -g -O0 -Wall -Werror -I.. -L.. -pthread -lpowertutor
 
 test_sending_estimation_server: test_sending_estimation.cpp
 	g++ -o $@ $^ -DSERVER_ONLY -g -O0 -Wall -Werror -I.. -L.. -pthread -lpowertutor
